--- a/odoo.conf
+++ b/odoo.conf
@@ -1,6 +1,7 @@
 [options]
 addons_path = /mnt/extra-addons
 data_dir = /var/lib/odoo
+db_port = 25060
 ; admin_passwd = admin
 ; csv_internal_sep = ,
 ; db_maxconn = 64
