--- a/odoo.conf
+++ b/odoo.conf
@@ -2,12 +2,12 @@
 addons_path = /mnt/extra-addons
 data_dir = /var/lib/odoo
 db_port = 25060
+dbfilter = odoo-.*
 ; admin_passwd = admin
 ; csv_internal_sep = ,
 ; db_maxconn = 64
 ; db_name = False
 ; db_template = template1
-; dbfilter = .*
 ; debug_mode = False
 ; email_from = False
 ; limit_memory_hard = 2684354560
