--- a/odoo.conf
+++ b/odoo.conf
@@ -2,11 +2,11 @@
 addons_path = /mnt/extra-addons
 data_dir = /var/lib/odoo
 db_port = 25060
+db_name = odoo-prod
 dbfilter = odoo-.*
 ; admin_passwd = admin
 ; csv_internal_sep = ,
 ; db_maxconn = 64
-; db_name = False
 ; db_template = template1
 ; debug_mode = False
 ; email_from = False
