--- a/odoo.conf
+++ b/odoo.conf
@@ -2,9 +2,8 @@
 addons_path = /mnt/extra-addons
 data_dir = /var/lib/odoo
 db_port = 25060
-db_name = odoo-poolerkarate-prod
-dbfilter = odoo-.*
-; admin_passwd = admin
+dbfilter = odoo-poolerkarate-prod
+admin_passwd = k4pr-nktd-ixxy
 ; csv_internal_sep = ,
 ; db_maxconn = 64
 ; db_template = template1
