--- a/odoo.conf
+++ b/odoo.conf
@@ -3,7 +3,7 @@ addons_path = /mnt/extra-addons
 data_dir = /var/lib/odoo
 db_port = 25060
 dbfilter = odoo-poolerkarate-prod
-list_db = false
+; list_db = false
 admin_passwd = k4pr-nktd-ixxy
 ; csv_internal_sep = ,
 ; db_maxconn = 64
